# simple-twitter-follow-scraper

./: .env.template  .gitignore  AGENTS.md  README.md  config.env.template  main.spec  pyproject.toml  pytest.ini  requirement.txt  requirements.txt
src/: input_cli.py  main.py  requirement.txt  styles.tcss  twitterConfig.py  twitterDriver.py  userClass.py
src/cli/: input.py
src/common/: decorators.py  exceptions.py  helper.py  types.py  utils.py
src/config/: loggingSetup.py  paths.py  setup.py  vars.py
src/core/: __init__.py  config.py  exceptions.py  inputCLI.py  loggingConfig.py  loggingSetup.py  selectors.py  twitterConfig.py  twitterDriver.py  types.py  userHandling.py  utils.py
src/models/: users.py
src/scraper/: driver.py  pipeline.py
src/tests/: test_userHandling.py
src/ui/: base.py  compare.py  compareManual.py  compareQuick.py  login.py  recordResult.py  recordSelector.py  scraper.py  scraperLogin.py  scraperProgress.py  scraperTask.py
