[project]
name = "project-twitter-follow-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nodriver>=0.48.1",
    "python-decouple>=3.8",
    "textual>=8.2.5",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8.4.2",
    "textual-dev>=1.8.0",
]
